# SentinelMD

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/src/: App.js
frontend/src/components/: ChatWindow.js  DrugCarousel.js
notebooks/: ragas.ipynb
scripts/: start.sh
src/agent/: graph.py  nodes.py  state.py
src/api/: main.py
src/core/: config.py
src/fhir/: hapi_client.py  parser.py
src/retrieval/: cache.py  pubmed.py  vector_store.py
tests/: pipeline_runner.py
